--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>This is my webpage</h1>
+        <h1 style="color :blue;">This is my webpage</h1>
         <h2>This is another Heading</h2>
     </body>
 </html>
